# stm32_cubemx_ina226

./: .clang-format  .gitmodules  CMakeLists.txt  stm32-cubemx-ina226.ioc
Core/Src/: gpio.c  stm32l4xx_it.c
Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_can.h
Drivers/STM32L4xx_HAL_Driver/Inc/Legacy/: stm32l4xx_hal_can_legacy.h
app/: CMakeLists.txt
app/ina226/: CMakeLists.txt  ina226.c  ina226.cpp  ina226.h  ina226.hpp  ina226_config.h  ina226_config.hpp  ina226_registers.h  ina226_registers.hpp
app/main/: CMakeLists.txt  main.cpp
